<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProduct">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/add_new_product" />

    <ImageView
        android:id="@+id/select_product_image"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:cropToPadding="false"
        android:src="@drawable/camera"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/select_product_image"
        android:inputType="textMultiLine"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:hint="Nama Produk..."
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:backgroundTint="@color/colorDark"
        android:textColor="@color/colorRose"
        android:textColorHint="@color/cardview_light_background"
        />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_name"
        android:inputType="textMultiLine"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:hint="Harga Produk..."
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:backgroundTint="@color/colorDark"
        android:textColor="@color/colorRose"
        android:textColorHint="@color/cardview_light_background"
        />

    <EditText
        android:id="@+id/product_discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_price"
        android:inputType="textMultiLine"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:hint="Diskon Produk..."
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:backgroundTint="@color/colorDark"
        android:textColor="@color/colorRose"
        android:textColorHint="@color/cardview_light_background"
        />

    <Button
        android:id="@+id/add_product_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_below="@id/product_discount"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_white"
        android:text="@string/Add_product_button"
        android:textAllCaps="false"
        android:textColor="@color/colorRose"
        android:textSize="12dp" />

</RelativeLayout>