<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/loginbg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="100dp">

            <LinearLayout
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/avatar_picture" />

                <EditText
                    android:id="@+id/inPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginEmail"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_password" />

                <EditText
                    android:id="@+id/inPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorHint"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/userseller_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userseller_login"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/loginPassword"
                android:layout_marginTop="36dp"
                android:textColor="@color/fragmentColor"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/not_userseller_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_userseller_login"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/loginPassword"
                android:textColor="@color/fragmentColor"
                android:textStyle="bold"
                android:layout_marginTop="36dp"
                android:visibility="invisible"
                />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginPassword"
                android:layout_marginTop="80dp"
                android:background="@drawable/button_white"
                android:text="@string/Login"
                android:textAllCaps="false"
                android:textColor="@color/colorRose"
                android:textSize="12dp" />
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loginButton"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:text="Forget Password?"
                android:textColor="@color/fragmentColor"
                />

        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>