<resources>
    <string name="app_name">ayedis_ecommerce</string>
    <string name="Login">Log In</string>
    <string name="Logout">Log Out</string>
    <string name="signup">Don\'t have an Account? <b>Sign Up</b></string>
    <string name="SignupButtonS">Sign Up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="userseller_login">Im an User Seller</string>
    <string name="not_userseller_login">Im Not an User Seller</string>
...
    <string name="orders">Orders</string>
    <string name="categories">Categorie</string>
    <string name="settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
...
